--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p>
           <audio id="recordedAudio"></audio>
       </p>
-      <h3>Recordings</h3>
+      <h3>New Recordings</h3>
       <ol id="recordingsList"></ol>
     </div>
 
